# dba

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  plan.xml  plan2.xml  plan3.xml  pyproject.toml  query.txt  query2.txt  query3.txt  requirements.txt
.ai/: architecture-map.md  context-index.md  decision-log.md  implemented-index.md  project-brief.md  prompt-recipes.md
.github/workflows/: ci.yml
config/: db.yaml.example  env_profile_datadb.yaml  env_profile_rawdb.yaml
docs/: ARQUITETURA.md  CONTRIBUTING.md  GUIA_DE_COLETA.md  GUIA_ENV_PROFILE.md  MANUAL_DE_USO.md  plano_tuning_rawdb.md
examples/: plan.txt  plan_agg_merge_adjn.xml  plan_agg_merge_spill.xml  plan_cartesian.xml  plan_instability.xml  plan_stale_stats.xml  plan_unused_idx.xml  query.sql  query_agg_merge_adjn.sql  query_agg_merge_spill.sql  query_cartesian.sql  query_plan_instability.sql  query_stale_stats.sql  query_unused_idx.sql  resultado_cartesian.md  resultado_exemplo.md  resultado_unused_idx.md
scripts/: bootstrap.sh
sql/: audit_global_indexes_on_partitioned.sql  top_sql_awr.sql
src/advisor/: __init__.py  awr_cli.py  awr_parser.py  batch.py  (+14 more)
tests/: fixtures_cartesian.py  fixtures_partial.py  fixtures_plan_instability.py  fixtures_rawdb.py  fixtures_stale_stats.py  fixtures_unused_idx.py  test_awr_profile.py  test_cartesian_case.py  test_global_index_rule.py  test_improvements_v3.py  test_index_collection_fixes.py  test_index_ddl_options.py  test_massive_rowid_access.py  test_owner_resolution.py  test_pipeline.py  test_plan_instability.py  test_unused_index_case.py  test_workarea_spill.py
(+18 files in other folders)
