[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-query-otim"
version = "1.0.0"
description = "Advisor de índices e tuning para Oracle 19c RAC com motor de regras desacoplado"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=25.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
db = ["oracledb>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
advisor = "advisor.cli:main"
advisor-awr = "advisor.awr_cli:main"
advisor-batch = "advisor.batch_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: testes que exigem conexão real ao banco (ORACLE_DSN setado)",
]
